// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobActionIcon /> should render when[canCancel=false && canRemove=false] 1`] = `""`;

exports[`<JobActionIcon /> should render when[canCancel=false && canRemove=true] 1`] = `
<Icon
  bsStyle="danger"
  faStyle="fas"
  fixedWidth={false}
  name="trash"
  onClick={[MockFunction]}
  pullRight={true}
  style={
    Object {
      "fontSize": "17px",
    }
  }
/>
`;

exports[`<JobActionIcon /> should render when[state='runing' && canCancel=true] 1`] = `
<Icon
  bsStyle="danger"
  faStyle="fas"
  fixedWidth={false}
  name="trash"
  onClick={[MockFunction]}
  pullRight={true}
  style={
    Object {
      "fontSize": "17px",
    }
  }
/>
`;

exports[`<JobActionIcon /> should render when[state='waiting' && canCancel=true] 1`] = `
<Icon
  bsStyle="danger"
  faStyle="fas"
  fixedWidth={false}
  name="ban"
  onClick={[MockFunction]}
  pullRight={true}
  style={
    Object {
      "fontSize": "17px",
    }
  }
/>
`;

exports[`<JobStatusIcon /> should render when[state='cancelled'] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;

exports[`<JobStatusIcon /> should render when[state='complete'] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;

exports[`<JobStatusIcon /> should render when[state='error'] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;

exports[`<JobStatusIcon /> should render when[state='running'] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;

exports[`<JobStatusIcon /> should render when[state='waiting'] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;
